# Mcpe-alpha-clone

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  build.sh
.github/actions/setup-cache/: action.yml
.github/actions/setup-ninja/: action.yml
.github/workflows/: build.yml
misc/web/: index.html
project/android/: AndroidManifest.xml
project/android/jni/: Android.mk  Application.mk
project/android/res/layout/: create_new_world.xml  create_world_screen.xml
project/android_java/: AndroidManifest.xml
project/android_java/res/layout/: create_new_world.xml  rename_mp_world.xml
project/android_java/res/values/: strings.xml
project/android_java/res/xml/: preferences.xml
project/android_java/src/com/gax/voxelforge/: MainActivity.java
project/android_java/src/com/gax/voxelforge/sound/: SoundPlayer.java
src/: AppPlatform.h  AppPlatform_glfw.h  NinecraftApp.cpp  main_glfw.h
src/client/: Minecraft.cpp  Minecraft.h  Options.cpp  Options.h  PixelCalc.h
src/client/gamemode/: CreativeMode.cpp  CreatorMode.cpp  GameMode.cpp
src/client/gui/: Gui.cpp
src/client/gui/components/: OptionsItem.cpp
src/client/gui/screens/: ArmorScreen.cpp  ChestScreen.cpp  CreditsScreen.cpp  DeathScreen.cpp  FurnaceScreen.cpp  IngameBlockSelectionScreen.cpp  IngameBlockSelectionScreen.h  JoinGameScreen.h  OptionsScreen.cpp  PauseScreen.cpp  ProgressScreen.cpp  ProgressScreen.h  ScreenChooser.cpp  SelectWorldScreen.cpp  SimpleChooseLevelScreen.cpp  StartMenuScreen.cpp  StartMenuScreen.h  TextEditScreen.cpp
src/client/gui/screens/touch/: TouchSelectWorldScreen.cpp  TouchStartMenuScreen.cpp
src/client/player/: LocalPlayer.cpp  LocalPlayer.h
src/client/renderer/: GameRenderer.cpp  ItemInHandRenderer.cpp  LevelRenderer.cpp  LevelRenderer.h  TileRenderer.cpp  TileRenderer.h
src/client/renderer/entity/: EntityRenderer.cpp  ItemRenderer.cpp  MobRenderer.cpp
src/client/renderer/ptexture/: DynamicTexture.cpp  DynamicTexture.h
src/network/: ClientSideNetworkHandler.cpp  ClientSideNetworkHandler.h  NetEventCallback.cpp  NetEventCallback.h  Packet.cpp  Packet.h
src/network/command/: CommandServer.cpp
src/platform/: CThread.cpp  log.h
src/util/: PerfTimer.h
src/world/entity/: Entity.cpp  Mob.cpp
src/world/entity/animal/: Chicken.cpp
src/world/entity/player/: Player.cpp  Player.h
src/world/food/: SimpleFoodData.cpp
src/world/item/: FlintAndSteelItem.h  FoodItem.h  TileItem.h
src/world/level/: FoliageColor.h  Level.cpp  Level.h  LevelConstants.h
src/world/level/biome/: Biome.cpp
src/world/level/chunk/: ChunkCache.h
src/world/level/dimension/: Dimension.cpp  Dimension.h
src/world/level/levelgen/: RandomLevelSource.cpp
src/world/level/storage/: ExternalFileLevelStorage.cpp  ExternalFileLevelStorage.h  LevelData.cpp  RegionFile.cpp  RegionFile.h
src/world/level/tile/: LeafTile.h
src/world/level/tile/entity/: NetherReactorTileEntity.cpp  SignTileEntity.cpp
